--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-image": "^1.3.1",
+    "react-pdf": "^3.0.5",
     "react-router-dom": "^4.2.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
