--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-floating-button-menu": "^1.0.8",
     "react-image": "^1.3.1",
     "react-pdf": "^3.0.5",
     "react-router-dom": "^4.2.2",
