--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^5.0.4",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -39,6 +40,7 @@
     "raf": "3.4.0",
     "react": "^16.3.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-css-transition-replace": "^3.0.3",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-floating-button-menu": "^1.0.8",
